<resources>
    <string name="app_name">TO DO List</string>
    <string name="todo">TODO</string>
    <string name="delete">delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lastname">lastname</string>
    <string name="age">age</string>
    <string name="first_name">first name</string>
    <string name="add_user">add user</string>
    <string name="users">Users</string>
</resources>